<resources>
    <string name="app_name">Wordle Helper</string>
    <string name="action_settings">Settings</string>

    <string name="go_to_word_display">See Words</string>
    <string name="instructions">Give Me Words: </string>

    <string name="letter1">Whose first letter:</string>
    <string name="letter2">Whose second letter:</string>
    <string name="letter3">Whose third letter:</string>
    <string name="letter4">Whose fourth letter:</string>
    <string name="letter5">Whose fifth letter:</string>
    <string name="hint">abcd</string>
    <string name="must_contain">That Contain These Letters:</string>
    <string name="must_not_contain">That Don\'t Contain These Letters: </string>
    <string name="action_about">About</string>
    <string name="action_new_game">New Game</string>
    <string name="action_hide_keyboard">Hide Keyboard</string>


    <string-array name="contains_array">
        <item>Can Only Be: </item>
        <item>Cannot Be: </item>
    </string-array>



    <string name="title_activity_settings">Settings</string>

    <!-- Preference Titles -->
    <string name="display_settings">Display</string>
    <string name="game_settings">Game</string>
    <string name="auto_save_title">Auto-Save</string>
    <string name="auto_reset_title">Auto-Reset-Game</string>


    <!-- Messages Preferences -->
    <string name="dark_mode">Dark mode</string>
    <string name="dark_mode_on">Use Dark mode if not disabled by the OS</string>
    <string name="dark_mode_off">Use Light mode</string>
    <string name="auto_save_on">The game automatically saves on exit</string>
    <string name="auto_save_off">A new game is started on start up</string>
    <string name="auto_reset_on">A new game is automatically started after every time you go back to the home screen</string>
    <string name="auto_reset_off">A new game only starts when you press the \"New Game\" button</string>


    <string name="dark_mode_key">mode</string>
    <string name="auto_save_key">auto_save</string>
    <string name="auto_reset_key">auto_reset</string>
    <string name="default_word_display_text">Loading…</string>

</resources>