<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.wordle_helper.Activities.MainActivity">

    <item
        android:id="@+id/action_new_game"
        android:title="@string/action_new_game"
        app:showAsAction="always|withText"
        android:icon="@drawable/ic_baseline_replay_24"/>

    <item
        android:id="@+id/action_settings"
        android:title="@string/action_settings"
        app:showAsAction="never|withText"
        android:icon="@drawable/ic_baseline_settings_24"/>


    <item
        android:id="@+id/action_about"
        android:title="@string/action_about"
        app:showAsAction="never|withText"
        android:icon="@drawable/ic_baseline_help_outline_24"/>
</menu>